@@ -1,5 +1,6 @@
 0.11.0
  - feat: support downloading condensed .rtdc files
+ - enh: allow user to choose download location via preferences (#43)
  - ref: download jobs no longer are identified via `resource_id`, but
    via `job_id`, because we now have condensed resources
  - setup: bump dclab from 0.39.15 to 0.40.0
